opa-gatekeeper/namespace/required-pod-in-namespace.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredpodnamespace
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredPodNamespace
      validation:
         openAPIV3Schema:
           type: object
           properties:
             namespace:
               type: string
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: | 
      package k8srequiredpodnamespace
      
      violation[{"msg": msg}]{
        provided := input.review.object.metadata.namespace
        required := input.parameters.namespace
        provided != required
        msg := sprintf("You must deploy resources within namespace %v", [required])
      }
